--- a/progs/tkifm.pod
+++ b/progs/tkifm.pod
@@ -23,16 +23,16 @@ Fiction Mapper (*note IFM:(ifm).)
 
 =head1 DESCRIPTION
 
-B<tkifm> is a graphical front end to ifm(1), the Interactive Fiction
-Mapper, written in Tcl/Tk.  It provides a text editing window in which you
-map out your game using B<ifm> commands, and a set of menus to view
-things.  The various features are as follows:
+B<tkifm> is a graphical front end to B<IFM>, the Interactive Fiction
+Mapper.  It provides a text editing window in which you map out your game
+using B<IFM> commands, and a set of menus to view things.  The various
+features are as follows:
 
 =over 4
 
 =item Text editing window
 
-This is the main window, where you type B<ifm> commands.  It provides all
+This is the main window, where you type B<IFM> commands.  It provides all
 the usual text editing command bindings that come with the Tcl/Tk text
 widget.
 
@@ -40,7 +40,7 @@ widget.
 
 The standard set of file commands: New, Open, Save, Save-As, Print (to
 PostScript), Quit.  There's also a command called Redraw, which invokes
-B<ifm> on the current file again.  Normally you don't have to use this
+B<IFM> on the current file again.  Normally you don't have to use this
 (it's done whenever you open a new file or save the current one), but if
 you change your initialisation file (see below) the changes won't be
 noticed unless you do a Redraw.
@@ -68,13 +68,13 @@ in another window.
 =item Help menu
 
 At the moment this just displays a small info panel about the current
-B<ifm> version.
+B<IFM> version.
 
 =back
 
 =head1 USING YOUR OWN EDITOR
 
-If you'd like to use your own editor to edit B<ifm> files, but still view
+If you'd like to use your own editor to edit B<IFM> files, but still view
 results with B<tkifm>, you can.  B<tkifm> recognizes when the file it is
 visiting gets modified, and rereads it if so.  If you like, you can also
 disable all B<tkifm> file modification commands by setting the C<ifm(edit)>
@@ -129,7 +129,7 @@ variables, their format and defaults.
 
 =head1 ERRORS AND WARNINGS
 
-Any errors or warnings that occur when invoking B<ifm> will be displayed in
+Any errors or warnings that occur when invoking B<IFM> will be displayed in
 a dialog.  The current line of the text window will be changed to point at
 the error or warning line (if appropriate).
 
